# provenancerank

./: .dockerignore  .env.example  .gitignore  ACCURACY.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  RUN_LOCAL.md  SYSTEM_DESIGN.md  alembic.ini  celerybeat-schedule.db  docker-compose.lite.yml  docker-compose.yml  precompute.py  provenancerank.db  provenancerank.db-shm  provenancerank.db-wal  pyproject.toml  pytest.ini  rank.py  requirements.txt  submission.csv  submission.xlsx  submission_metadata.yaml  validate_submission.py
.claude/: settings.local.json
alembic/: env.py
api/: app.py  deps.py  errors.py  main.py  metrics.py  middleware.py  schemas.py
artifacts/: .gitkeep
artifacts_demo/: bm25_index.pkl  candidate_ids.txt  embedding_meta.json  embeddings.npy  embeddings.npy.key  excluded_candidates.csv  feature_matrix.pkl  jd_cosine.npy  jd_cosine.npy.key  jd_spec.json  manifest.json  rerank_scores.npy  rerank_scores.npy.key
core/: artifact_cache.py  celery_app.py  circuit_breaker.py  config.py  config.py.bak  constants.py  device.py  exceptions.py  llm.py  logging.py  security.py  tracing.py
db/: base.py  init.sql  models.py  repositories.py
docs/: 01_overview.md  02_architecture.md  03_features.md  04_file_by_file.md  05_build_from_scratch.md  06_glossary.md  07_running_guide.md  README.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.js.timestamp-1781925523942-ca8d1b8d9218d.mjs  vite.config.ts
(+83 files in other folders)
